[gd_scene load_steps=4 format=3 uid="uid://b86ek0j7q6hgt"]

[ext_resource type="Theme" uid="uid://71jef1qy2cb2" path="res://assets/main_theme.tres" id="1_li0cv"]
[ext_resource type="Script" path="res://lootlocker/ScoreSubmitPanel.gd" id="2_iel71"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_134ek"]
bg_color = Color(0.156863, 0.462745, 0.772549, 1)

[node name="ScoreSubmitPanel" type="Panel"]
custom_minimum_size = Vector2(1080, 1920)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_li0cv")
theme_override_styles/panel = SubResource("StyleBoxFlat_134ek")
script = ExtResource("2_iel71")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Score
"
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "0000
"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Stat" type="HBoxContainer" parent="VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Stats/Stat"]
layout_mode = 2
size_flags_horizontal = 3
text = "Statistic 1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Stats/Stat"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value 1"
horizontal_alignment = 1

[node name="Stat2" type="HBoxContainer" parent="VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Stats/Stat2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Statistic 1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Stats/Stat2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value 1"
horizontal_alignment = 1

[node name="Stat3" type="HBoxContainer" parent="VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Stats/Stat3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Statistic 1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Stats/Stat3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value 1"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Name" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Your name"
alignment = 1

[node name="Submit" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="Submitted" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Home" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Home"

[node name="Leaderboard" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Leaderboard"

[node name="Again" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Again"

[connection signal="text_changed" from="VBoxContainer/MarginContainer/VBoxContainer/Name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Again" to="." method="_on_again_pressed"]
